// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField when small renders 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="wrapper small"
      data-testid="Form-Field-Wrapper"
    >
      <div
        class="horizontalWrapper"
      >
        <div
          class="inputWrapper"
        >
          <div
            class="childrenWrapper"
            tabindex="-1"
          >
            <input
              class="input"
              id=":r6:"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField with no props renders 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="wrapper"
      data-testid="Form-Field-Wrapper"
    >
      <div
        class="horizontalWrapper"
      >
        <div
          class="inputWrapper"
        >
          <div
            class="childrenWrapper"
            tabindex="-1"
          >
            <input
              class="input"
              id=":r0:"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
